# tailwind-color-picker

./: LICENSE  README.md  pyproject.toml
src/tailwind_cp/: main.py
