[tool.poetry]
name = "tailwind-color-picker"
version = "0.1.0"
description = "TUI Application for browsing and copying Tailwind colors to the clipboard."
authors = ["Dan Cook <cook.r.dan@gmail.com>"]
repository = "https://github.com/1dancook/tailwind-color-picker"
readme = "README.md"
packages = [{include = "tailwind_cp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.6.0"
textual = "^0.41.0"
pyperclip = "^1.8.2"

[tool.poetry.scripts]
twcp = "tailwind_cp.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
